--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,3 @@
-/* This is the required project styling. Will contain essential CSS styles like:
-   * Flex property
-   * Grid layout
-   * Cards and sections
-*/
-
 @import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 /* variables */
@@ -139,14 +133,14 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh; /* full screen */
-  padding-top: 80px; /* account for navbar */
+  min-height: 100vh; 
+  padding-top: 80px; 
 }
 
 .profile-image {
   width: 150px;
   border-radius: 50%;
-  animation: bounce 1s infinite alternate;
+  animation: bounce 1s alternate infinite;
 }
 
 @keyframes bounce {
@@ -181,7 +175,7 @@ body {
 
 .project {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: minmax(250px, auto);
   grid-gap: 0.9rem;
   justify-content: center;
@@ -212,10 +206,9 @@ body {
   left: 10px;
 }
 
-/* Skills */
 .skills {
   padding: 4rem 0;
-  min-height: 100vh; /* full screen */
+  min-height: 100vh;
 }
 
 .skills-wrapper {
@@ -297,11 +290,16 @@ body {
   resize: none;
   height: 120px;
 }
+#form-status {
+  margin-top: 1rem;
+  font-weight: 600;
+}
+
 
 /* Footer */
 #footer {
   background: #111111;
-  padding: 2rem 0;
+  padding: 10px 0;
 }
 
 #footer .container {
@@ -336,7 +334,7 @@ body {
 }
 
 #footer p {
-  font-size: 0.8rem;
+  font-size:larger;
 }
 
 /* Responsiveness */
