--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -1,9 +1,4 @@
-/* ?This is where reusable styling of this template will be. 
-   !Will contain things like:
-   * Button styling
-   * Background color styling
-   * padding and margin
-*/
+
 
 .container {
   max-width: var(--width-medium);
@@ -136,32 +131,12 @@ h2::selection {
 
 /* project 1 */
 .card:nth-child(1) {
-  background: url(../assets/project/project-one.png) center center/cover;
+  background: url(../assets/project/frumixx.png) center center/cover;
 }
 
 /* Project 2 */
 .card:nth-child(2) {
   background: url(../assets/project/project-two.png) center center/cover;
-}
-
-/* Project 3 */
-.card:nth-child(3) {
-  background: url(../assets/project/project-three.png) center center/cover;
-}
-
-/* Project 4 */
-.card:nth-child(4) {
-  background: url(../assets/project/project-four.png) center center/cover;
-}
-
-/* Project 5 */
-.card:nth-child(5) {
-  background: url(../assets/project/project-five.png) center center/cover;
-}
-
-/* Project 6 */
-.card:nth-child(6) {
-  background: url(../assets/project/project-six.png) center center/cover;
 }
 
 /* Media Queries */
